--- a/regressiontests/stable-config/pom.xml
+++ b/regressiontests/stable-config/pom.xml
@@ -22,8 +22,12 @@
 	</parent>
 
 	<artifactId>causeway-regressiontests-stable-config</artifactId>
-
 	<name>Apache Causeway - Regression Tests (stable) - Config</name>
+	
+	<properties>
+        <maven.install.skip>true</maven.install.skip>
+        <maven.deploy.skip>true</maven.deploy.skip>
+    </properties>
 
 	<dependencies>
 		<dependency>
