--- a/regressiontests/stable-core-wrapperfactory/pom.xml
+++ b/regressiontests/stable-core-wrapperfactory/pom.xml
@@ -22,6 +22,11 @@
     <artifactId>causeway-regressiontests-core-wrapperfactory</artifactId>
     <name>Apache Causeway - Regression Tests (stable) - Core WrapperFactory</name>
 
+	<properties>
+        <maven.install.skip>true</maven.install.skip>
+        <maven.deploy.skip>true</maven.deploy.skip>
+    </properties>
+
     <dependencies>
 
 		<dependency>
