--- a/regressiontests/stable-cmdexecauditsess/persistence-jdo/pom.xml
+++ b/regressiontests/stable-cmdexecauditsess/persistence-jdo/pom.xml
@@ -21,6 +21,11 @@
 
     <artifactId>causeway-regressiontests-cmdexecauditsess-persistence-jdo</artifactId>
     <name>Apache Causeway - Regression Tests (stable) - Cmd/Exec/Audit/Session - JDO</name>
+	
+	<properties>
+        <maven.install.skip>true</maven.install.skip>
+        <maven.deploy.skip>true</maven.deploy.skip>
+    </properties>
 
     <dependencies>
 
