--- a/regressiontests/stable-cmdexecauditsess/persistence-jpa/pom.xml
+++ b/regressiontests/stable-cmdexecauditsess/persistence-jpa/pom.xml
@@ -22,13 +22,17 @@
     <artifactId>causeway-regressiontests-cmdexecauditsess-persistence-jpa</artifactId>
     <name>Apache Causeway - Regression Tests (stable) - Cmd/Exec/Audit/Session - JPA</name>
 
+	<properties>
+        <maven.install.skip>true</maven.install.skip>
+        <maven.deploy.skip>true</maven.deploy.skip>
+    </properties>
+
     <dependencies>
 
         <dependency>
             <groupId>org.apache.causeway.regressiontests</groupId>
             <artifactId>causeway-regressiontests-cmdexecauditsess-generic</artifactId>
             <scope>test</scope>
-
         </dependency>
 
         <dependency>
