--- a/starters/pom.xml
+++ b/starters/pom.xml
@@ -316,7 +316,7 @@
 						<plugin>
 							<groupId>org.apache.maven.plugins</groupId>
 							<artifactId>maven-surefire-report-plugin</artifactId>
-							<version>${maven-surefire-plugin.version}</version>
+							<version>${maven-surefire-report-plugin.version}</version>
 							<configuration>
 								<showSuccess>false</showSuccess>
 							</configuration>
