ISIS-3275: deps: convergence fixes
- remove hibernate-core from spring-boot-jpa-starter (artifact
coordinates changed)

--- a/persistence/jpa/eclipselink/pom.xml
+++ b/persistence/jpa/eclipselink/pom.xml
@@ -110,7 +110,7 @@
 				</exclusion>
 				<exclusion>
 					<!-- using eclipse-link instead -->
-					<groupId>org.hibernate</groupId>
+					<groupId>org.hibernate.orm</groupId>
 					<artifactId>hibernate-core</artifactId>
 				</exclusion>
 				<exclusion>
