ISIS-3303: fixes (?) 'Invalid automatic module name' error for regressiontests-cmdexecauditsess-persistence-{jpa|jdo}

--- a/regressiontests/stable-cmdexecauditsess/pom.xml
+++ b/regressiontests/stable-cmdexecauditsess/pom.xml
@@ -24,6 +24,11 @@
 
     <packaging>pom</packaging>
 
+    <properties>
+        <maven.install.skip>true</maven.install.skip>
+        <maven.deploy.skip>true</maven.deploy.skip>
+    </properties>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
