--- a/regressiontests/stable-cmdexecauditsess/pom.xml
+++ b/regressiontests/stable-cmdexecauditsess/pom.xml
@@ -17,6 +17,7 @@
         <groupId>org.apache.causeway.regressiontests</groupId>
         <artifactId>causeway-regressiontests</artifactId>
         <version>2.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>causeway-regressiontests-cmdexecauditsess</artifactId>
