--- a/regressiontests/stable-cmdexecauditsess/persistence-jdo/pom.xml
+++ b/regressiontests/stable-cmdexecauditsess/persistence-jdo/pom.xml
@@ -21,10 +21,13 @@
 
     <artifactId>causeway-regressiontests-cmdexecauditsess-persistence-jdo</artifactId>
     <name>Apache Causeway - Regression Tests (stable) - Cmd/Exec/Audit/Session - JDO</name>
-	
+
 	<properties>
         <maven.install.skip>true</maven.install.skip>
         <maven.deploy.skip>true</maven.deploy.skip>
+
+        <jar-plugin.automaticModuleName>org.apache.causeway.regressiontests.cmdexecauditsess.persistence.jdo</jar-plugin.automaticModuleName>
+        <git-plugin.propertiesDir>org/apache/causeway/regressiontests/stable-cmdexecauditsess/persistence-jdo</git-plugin.propertiesDir>
     </properties>
 
     <dependencies>
