--- a/regressiontests/stable-cmdexecauditsess/persistence-jpa/pom.xml
+++ b/regressiontests/stable-cmdexecauditsess/persistence-jpa/pom.xml
@@ -25,6 +25,9 @@
 	<properties>
         <maven.install.skip>true</maven.install.skip>
         <maven.deploy.skip>true</maven.deploy.skip>
+
+        <jar-plugin.automaticModuleName>org.apache.causeway.regressiontests.cmdexecauditsess.persistence.jpa</jar-plugin.automaticModuleName>
+        <git-plugin.propertiesDir>org/apache/causeway/regressiontests/stable-cmdexecauditsess/persistence-jpa</git-plugin.propertiesDir>
     </properties>
 
     <dependencies>
