--- a/regressiontests/stable-cmdexecauditsess/pom.xml
+++ b/regressiontests/stable-cmdexecauditsess/pom.xml
@@ -28,6 +28,9 @@
     <properties>
         <maven.install.skip>true</maven.install.skip>
         <maven.deploy.skip>true</maven.deploy.skip>
+
+        <jar-plugin.automaticModuleName>org.apache.causeway.regressiontests.cmdexecauditsess</jar-plugin.automaticModuleName>
+        <git-plugin.propertiesDir>org/apache/causeway/regressiontests/stable-cmdexecauditsess</git-plugin.propertiesDir>
     </properties>
 
     <dependencyManagement>
