--- a/regressiontests/stable-rest/pom.xml
+++ b/regressiontests/stable-rest/pom.xml
@@ -23,10 +23,13 @@
 
 	<artifactId>causeway-regressiontests-stable-rest</artifactId>
 	<name>Apache Causeway - Regression Tests (stable) - Rest</name>
-	
+
 	<properties>
         <maven.install.skip>true</maven.install.skip>
         <maven.deploy.skip>true</maven.deploy.skip>
+
+		<jar-plugin.automaticModuleName>org.apache.causeway.regressiontests.stable.rest</jar-plugin.automaticModuleName>
+		<git-plugin.propertiesDir>org/apache/causeway/regressiontests/stable-rest</git-plugin.propertiesDir>
     </properties>
 
 	<dependencies>
@@ -42,7 +45,7 @@
 			<artifactId>causeway-persistence-jdo-datanucleus</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.causeway.testing</groupId>
 			<artifactId>causeway-testing-fixtures-applib</artifactId>
