ISIS-3303: makes stable regression tests artifacts consistent

--- a/regressiontests/stable-bootstrapping/pom.xml
+++ b/regressiontests/stable-bootstrapping/pom.xml
@@ -28,7 +28,7 @@
         <maven.install.skip>true</maven.install.skip>
         <maven.deploy.skip>true</maven.deploy.skip>
 
-		<jar-plugin.automaticModuleName>org.apache.causeway.regressiontests.bootstrapping</jar-plugin.automaticModuleName>
+		<jar-plugin.automaticModuleName>org.apache.causeway.regressiontests.stable.bootstrapping</jar-plugin.automaticModuleName>
 		<git-plugin.propertiesDir>org/apache/causeway/regressiontests/stable-bootstrapping</git-plugin.propertiesDir>
 	</properties>
 
