--- a/regressiontests/stable-cmdexecauditsess/pom.xml
+++ b/regressiontests/stable-cmdexecauditsess/pom.xml
@@ -20,7 +20,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>causeway-regressiontests-cmdexecauditsess</artifactId>
+    <artifactId>causeway-regressiontests-stable-cmdexecauditsess</artifactId>
     <name>Apache Causeway - Regression Tests (stable) - Cmd/Exec/Audit/Session</name>
 
     <packaging>pom</packaging>
@@ -29,7 +29,7 @@
         <maven.install.skip>true</maven.install.skip>
         <maven.deploy.skip>true</maven.deploy.skip>
 
-        <jar-plugin.automaticModuleName>org.apache.causeway.regressiontests.cmdexecauditsess</jar-plugin.automaticModuleName>
+        <jar-plugin.automaticModuleName>org.apache.causeway.regressiontests.stable.cmdexecauditsess</jar-plugin.automaticModuleName>
         <git-plugin.propertiesDir>org/apache/causeway/regressiontests/stable-cmdexecauditsess</git-plugin.propertiesDir>
     </properties>
 
@@ -52,7 +52,7 @@
 
             <dependency>
                 <groupId>org.apache.causeway.regressiontests</groupId>
-                <artifactId>causeway-regressiontests-cmdexecauditsess-generic</artifactId>
+                <artifactId>causeway-regressiontests-stable-cmdexecauditsess-generic</artifactId>
                 <version>2.0.0-SNAPSHOT</version>
             </dependency>
         </dependencies>
