--- a/regressiontests/stable-cmdexecauditsess/persistence-jdo/pom.xml
+++ b/regressiontests/stable-cmdexecauditsess/persistence-jdo/pom.xml
@@ -15,18 +15,18 @@
 
     <parent>
         <groupId>org.apache.causeway.regressiontests</groupId>
-        <artifactId>causeway-regressiontests-cmdexecauditsess</artifactId>
+        <artifactId>causeway-regressiontests-stable-cmdexecauditsess</artifactId>
         <version>2.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>causeway-regressiontests-cmdexecauditsess-persistence-jdo</artifactId>
+    <artifactId>causeway-regressiontests-stable-cmdexecauditsess-persistence-jdo</artifactId>
     <name>Apache Causeway - Regression Tests (stable) - Cmd/Exec/Audit/Session - JDO</name>
 
 	<properties>
         <maven.install.skip>true</maven.install.skip>
         <maven.deploy.skip>true</maven.deploy.skip>
 
-        <jar-plugin.automaticModuleName>org.apache.causeway.regressiontests.cmdexecauditsess.persistence.jdo</jar-plugin.automaticModuleName>
+        <jar-plugin.automaticModuleName>org.apache.causeway.regressiontests.stable.cmdexecauditsess.persistence.jdo</jar-plugin.automaticModuleName>
         <git-plugin.propertiesDir>org/apache/causeway/regressiontests/stable-cmdexecauditsess/persistence-jdo</git-plugin.propertiesDir>
     </properties>
 
@@ -34,7 +34,7 @@
 
         <dependency>
             <groupId>org.apache.causeway.regressiontests</groupId>
-            <artifactId>causeway-regressiontests-cmdexecauditsess-generic</artifactId>
+            <artifactId>causeway-regressiontests-stable-cmdexecauditsess-generic</artifactId>
             <scope>test</scope>
         </dependency>
 
