--- a/api/schema/pom.xml
+++ b/api/schema/pom.xml
@@ -57,37 +57,8 @@
 			</activation>
 
 			<build>
-
 				<plugins>
-					<plugin>
-					    <groupId>org.codehaus.mojo</groupId>
-					    <artifactId>jaxb2-maven-plugin</artifactId>
-					    <version>3.1.0</version>
-					    <executions>
-					        <execution>
-					            <id>xjc</id>
-					            <goals>
-					                <goal>xjc</goal>
-					            </goals>
-					        </execution>
-					    </executions>
-					    <configuration>
-					        <xjbSources>
-					            <xjbSource>src/main/resources/org/apache/causeway/schema/bindings.xjb</xjbSource>
-					        </xjbSources>
-					        <sources>
-								<source>src/main/resources/org/apache/causeway/schema/common/common-2.0.xsd</source>
-								<source>src/main/resources/org/apache/causeway/schema/cmd/cmd-2.0.xsd</source>
-								<source>src/main/resources/org/apache/causeway/schema/ixn/ixn-2.0.xsd</source>
-								<source>src/main/resources/org/apache/causeway/schema/chg/chg-2.0.xsd</source>
-								<source>src/main/resources/org/apache/causeway/schema/metamodel/metamodel-2.0.xsd</source>
-					        </sources>
-					        <outputDirectory>${basedir}/target/generated-sources/xjc</outputDirectory>
-					        <clearOutputDir>false</clearOutputDir>
-					    </configuration>
-					</plugin>
-					
-					<!-- 
+
 					<plugin>
 						<groupId>org.jvnet.jaxb2.maven2</groupId>
 						<artifactId>maven-jaxb2-plugin</artifactId>
@@ -100,17 +71,13 @@
 									<goal>generate</goal>
 								</goals>
 								<configuration>
-									<schemaDirectory>src/main/resources/org/apache/causeway/schema</schemaDirectory>
+									<schemaDirectory>src/main/resources/schema</schemaDirectory>
 									<schemaIncludes>
-										<schemaInclude>common/common-2.0.xsd</schemaInclude>
-										<schemaInclude>cmd/cmd-2.0.xsd</schemaInclude>
-										<schemaInclude>ixn/ixn-2.0.xsd</schemaInclude>
-										<schemaInclude>chg/chg-2.0.xsd</schemaInclude>
-										<schemaInclude>metamodel/metamodel-2.0.xsd</schemaInclude>
+										<schemaInclude>**/*.xsd</schemaInclude>
 									</schemaIncludes>
-									<bindingDirectory>src/main/resources/org/apache/causeway/schema</bindingDirectory>
+									<bindingDirectory>src/main/resources/schema</bindingDirectory>
 									<bindingIncludes>
-										<bindingInclude>bindings.xml</bindingInclude>
+										<bindingInclude>**/bindings.xml</bindingInclude>
 									</bindingIncludes>
 									<args>
 										<arg>-extension</arg>
@@ -118,27 +85,34 @@
 										<arg>-Xannotate</arg>
 									</args>
 									<extension>true</extension>
-									<plugins>
-										<plugin>
-											<groupId>org.jvnet.jaxb2_commons</groupId>
-											<artifactId>jaxb2-basics-annotate</artifactId>
-											<version>1.1.0</version>
-										</plugin>
-									</plugins>
 								</configuration>
 							</execution>
 						</executions>
 						<dependencies>
+							<dependency>
+							      <groupId>jakarta.xml.bind</groupId>
+							      <artifactId>jakarta.xml.bind-api</artifactId>
+							      <version>4.0.0</version>
+						    </dependency>
+						    <dependency>
+							      <groupId>jakarta.inject</groupId>
+							      <artifactId>jakarta.inject-api</artifactId>
+							      <version>2.0.1</version>
+						    </dependency>
+						    <dependency>
+							    <groupId>javax.xml.bind</groupId>
+							    <artifactId>jaxb-api</artifactId>
+							    <version>2.3.0</version>
+							</dependency>
 							<dependency>
 								<groupId>org.jvnet.jaxb2_commons</groupId>
 								<artifactId>jaxb2-namespace-prefix</artifactId>
 								<version>1.3</version>
 							</dependency>
 							<dependency>
-								
-								<groupId>org.glassfish.jaxb</groupId>
-								<artifactId>jaxb-runtime</artifactId>
-								<version>2.3.3</version>
+								<groupId>org.jvnet.jaxb2_commons</groupId>
+								<artifactId>jaxb2-basics-annotate</artifactId>
+								<version>1.1.0</version>
 							</dependency>
 						</dependencies>
 					</plugin>
@@ -161,9 +135,93 @@
 							</execution>
 						</executions>
 					</plugin>
+					<plugin>
+		                <groupId>org.apache.maven.plugins</groupId>
+		                <artifactId>maven-antrun-plugin</artifactId>
+		                <executions>
+		                    <execution>
+		                        <id>patch-javax-to-jakarta-ns</id>
+		                        <phase>generate-sources</phase>
+		                        <goals>
+		                            <goal>run</goal>
+		                        </goals>
+		                        <configuration>
+		                            <target>
+										<replace 
+											dir="target/generated-sources/xjc"
+											token="javax.xml.bind" 
+											value="jakarta.xml.bind">
+											<include name="**/*.java"/>
+										</replace>
+		                            </target>
+		                        </configuration>
+		                    </execution>
+		                </executions>
+            </plugin>
+
+<!-- generates jakarta namespaces - but (sub) plugins do fail
+					<plugin>
+					    <groupId>org.codehaus.mojo</groupId>
+					    <artifactId>jaxb2-maven-plugin</artifactId>
+					    <version>3.1.0</version>
+					    <executions>
+					        <execution>
+					            <id>xjc</id>
+					            <goals>
+					                <goal>xjc</goal>
+					            </goals>
+					            <configuration>
+									<arguments>
+										<argument>-Xnamespace-prefix</argument>
+										<argument>-Xannotate</argument>
+									</arguments>
+								</configuration>
+					        </execution>
+					    </executions>
+					    <configuration>
+					        <xjbSources>
+					            <xjbSource>src/main/resources/org/apache/causeway/schema/bindings.xjb</xjbSource>
+					        </xjbSources>
+					        <sources>
+								<source>src/main/resources/org/apache/causeway/schema/common/common-2.0.xsd</source>
+								<source>src/main/resources/org/apache/causeway/schema/cmd/cmd-2.0.xsd</source>
+								<source>src/main/resources/org/apache/causeway/schema/ixn/ixn-2.0.xsd</source>
+								<source>src/main/resources/org/apache/causeway/schema/chg/chg-2.0.xsd</source>
+								<source>src/main/resources/org/apache/causeway/schema/metamodel/metamodel-2.0.xsd</source>
+					        </sources>
+					        <outputDirectory>${basedir}/target/generated-sources/xjc</outputDirectory>
+					        <clearOutputDir>false</clearOutputDir>
+					    </configuration>
+					    <dependencies>
+							<dependency>
+							      <groupId>jakarta.xml.bind</groupId>
+							      <artifactId>jakarta.xml.bind-api</artifactId>
+							      <version>4.0.0</version>
+						    </dependency>
+							<dependency>
+							    <groupId>javax.xml.bind</groupId>
+							    <artifactId>jaxb-api</artifactId>
+							    <version>2.3.0</version>
+							</dependency>
+							<dependency>
+							      <groupId>jakarta.inject</groupId>
+							      <artifactId>jakarta.inject-api</artifactId>
+							      <version>2.0.1</version>
+						    </dependency>
+							<dependency>
+								<groupId>org.jvnet.jaxb2_commons</groupId>
+								<artifactId>jaxb2-namespace-prefix</artifactId>
+								<version>1.3</version>
+							</dependency>
+			                <dependency>
+         				    	<groupId>org.jvnet.jaxb2_commons</groupId>
+								<artifactId>jaxb2-basics-annotate</artifactId>
+								<version>1.1.0</version>
+                			</dependency>
+						</dependencies>
+					</plugin>
+
 					-->
-					
-					
 				</plugins>
 			</build>
 		</profile>
